testsuite/poke.pkl/cast-diag-6.pk
/* { dg-do compile } */

fun foo = string:
  {
   return 666 as int[]; /* { dg-error "" } */
  }
